scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-one-ingress/ingress-class-resource/other-ingress-class.yaml
---
# A second ingress class
# no controller will be running for this class but the resource will exist in kubernetes
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    app.kubernetes.io/component: controller
  name: other-gateway
spec:
  controller: azure/application-gateway
